// Messages used when events happen in the Tiles system.
syntax = "proto3";

package androidx.wear.tiles.proto;

option java_package = "androidx.wear.tiles.proto";
option java_outer_classname = "EventProto";

// Event fired when a tile has been added to the carousel.
message TileAddEvent {
  // The ID of the tile added to the carousel.
  uint32 tile_id = 1;
}

// Event fired when a tile has been removed from the carousel.
message TileRemoveEvent {
  // The ID of the tile removed from the carousel.
  uint32 tile_id = 1;
}

// Event fired when a tile is swiped to by the user (i.e. it's visible on
// screen).
message TileEnterEvent {
  // The ID of the entered tile.
  uint32 tile_id = 1;
}

// Event fired when a tile is swiped away from by the user (i.e. it's no longer
// visible on screen).
message TileLeaveEvent {
  // The ID of the tile.
  uint32 tile_id = 1;
}
